--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@ Select ONE Additional Feature to Add
 
 <body>
 
-  <h1>____'s Recipe Book</h1>
+  <h1> Elise's Recipe Book</h1>
 
   <h2>Contents:</h2>
 
   <ol>
-    <li><a href="?">Recipe #1</a></li>
+    <li><a href="?">Baked Mac and Cheese</a></li>
   </ol>
 
   <h2 id="?">Recipe #1</h2>
@@ -49,8 +49,26 @@ Select ONE Additional Feature to Add
     </thead>
     <tbody>
       <tr>
-        <td>Ingredient #1</td>
-        <td>Quantity #1</td>
+        <td>dried elbow pasta</td>
+        <td>1 lb</td>
+      </tr>
+    </tbody>
+    <tbody>
+      <tr>
+        <td>unsalted butter</td>
+        <td>1/2 cup</td>
+      </tr>
+    </tbody>
+    <tbody>
+      <tr>
+        <td>all purpose flour</td>
+        <td>1/2 cup</td>
+      </tr>
+    </tbody>
+    <tbody>
+      <tr>
+        <td>whole milk</td>
+        <td>1 1/2 cup</td>
       </tr>
     </tbody>
   </table>
