--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Select ONE Additional Feature to Add
   <title>Project: Recipe book</title>
   <meta charset="utf-8">
   <style>
+  table, th, td {border: 1px solid;}
   </style>
 </head>
 
@@ -33,7 +34,7 @@ Select ONE Additional Feature to Add
     <li><a href="?">Baked Mac and Cheese</a></li>
   </ol>
 
-  <h2 id="?">Recipe #1</h2>
+  <h2 id="cheese">Baked Mac and Cheese</h2>
 
   <ul>
     <li>Time: _</li>
@@ -53,27 +54,81 @@ Select ONE Additional Feature to Add
         <td>1 lb</td>
       </tr>
     </tbody>
+
     <tbody>
       <tr>
         <td>unsalted butter</td>
         <td>1/2 cup</td>
       </tr>
     </tbody>
+
     <tbody>
       <tr>
         <td>all purpose flour</td>
         <td>1/2 cup</td>
       </tr>
     </tbody>
+
     <tbody>
       <tr>
         <td>whole milk</td>
         <td>1 1/2 cup</td>
       </tr>
     </tbody>
+
+      <tbody>
+      <tr>
+        <td>half and half</td>
+        <td>2 1/2 cup</td>
+      </tr>
+    </tbody>
+
+      <tbody>
+      <tr>
+        <td>shredded medium cheddar cheese</td>
+        <td>4 cup</td>
+      </tr>
+    </tbody>
+
+      <tbody>
+      <tr>
+        <td>shredded meduim cheddar cheese</td>
+        <td>2 cup</td>
+      </tr>
+    </tbody>
+
+      <tbody>
+      <tr>
+        <td>salt</td>
+        <td>1/2 tbsp</td>
+      </tr>
+    </tbody>
+
+      <tbody>
+      <tr>
+        <td>black pepper</td>
+        <td>1/2 tsp</td>
+      </tr>
+    </tbody>
+
+      <tbody>
+      <tr>
+        <td>paprika</td>
+        <td>1/2 tsp</td>
+      </tr>
+    </tbody>
+
+
   </table>
 
-  <p><strong>Step 1:</strong> Do something.
+  <p><strong>Step 1:</strong> Preheat oven to 325 degrees F and grease a 3 qt baking dish (9x13").Set aside.<br>
+    <strong>Step 2:</strong> Bring a large pot of salted waqter to boil. When boiling, add dried pasta and cook for 1 minute less than the package directs for al dente. Drain and drizzle with little a bit of olive oil to keep from sticking. <br> 
+    <strong>Step 3:</strong> While water is coming up tp boil, shred cheeses and toss together to mix, then divide into three piles. Approximately 3 cups for the sauce, 1 1/2 cups for the inner layer, and 1 1/2 cups for the topping.<br>
+    <strong>Step 4:</strong> Melt butter in a large saucepan ovet MED heat. Sprinkle in flour and whisk to combine. Mixtue will look like very wet sand. Cook for approximateloy 1 minuter, whisking often. Slowly pour in about 2 cups or so of the half and half, while whiskng constantly, until smooth. Slowly pour in remaining half and half plus the whole milk, while whisking constsantly, until comined and smooth.<br>
+    <strong>Step 5:</strong> Continue to heat over MED heat, whisking very often, until thickened to a very thick consistency. It should almost be the consistncy of semi thinned out condensed soup.<br>
+    <strong>Step 6:</strong> Remove from the heat ad stir in spices and 1 1/2 cups of the cheeses, stirring to melt and combine. Stir in another 1 1/2 cups of cheese and stir until completely melted and smooth.<br>
+    <strong>Step 7:</strong> In a large mixing bowl, combine drained pasta with cheese sauce, stirring to combine fully. Pour half of the pasta mixture into the prepared baking dish. Top with 1 1/2 cups of shredded cheeses, the top that with the remaining pasta mixture.<br>
+    <strong> Step 8:</strong>
   </p>
 
   <p><em>Source: <a href="?">Some recipes websites</a></em></p>
